--- a/Mindmap/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap/Mindmap.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClInclude Include="..\BranchCopyTraverser.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\MoveVisitor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp">
@@ -525,6 +528,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="..\KeyAction.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\MoveVisitor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
