--- a/Mindmap/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap/Mindmap.vcxproj.filters
@@ -273,11 +273,11 @@
     <ClInclude Include="..\BranchCopyTraverser.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="MoveTraverser.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="..\MoveVisitor.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="..\MoveTraverser.h">
+      <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -533,10 +533,10 @@
     <ClCompile Include="..\KeyAction.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="MoveTraverser.cpp">
+    <ClCompile Include="..\MoveVisitor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\MoveVisitor.cpp">
+    <ClCompile Include="..\MoveTraverser.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
