--- a/Mindmap/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap/Mindmap.vcxproj.filters
@@ -279,6 +279,12 @@
     <ClInclude Include="..\MoveTraverser.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\FlipVisitor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="..\FlipTraverser.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp">
@@ -537,6 +543,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="..\MoveTraverser.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\FlipVisitor.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\FlipTraverser.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
