--- a/Mindmap/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap/Mindmap.vcxproj
@@ -53,10 +53,12 @@
     <ClInclude Include="..\MarkStrategy.h" />
     <ClInclude Include="..\MouseAction.h" />
     <ClInclude Include="..\MouseStrategy.h" />
+    <ClInclude Include="..\MoveStrategy.h" />
     <ClInclude Include="..\MoveTraverser.h" />
     <ClInclude Include="..\MoveVisitor.h" />
     <ClInclude Include="..\MultiLineDragAction.h" />
     <ClInclude Include="..\MultiSelect.h" />
+    <ClInclude Include="..\MultiSelectionStrategy.h" />
     <ClInclude Include="..\OnHScrollLeft.h" />
     <ClInclude Include="..\OnHScrollLineLeft.h" />
     <ClInclude Include="..\OnHScrollLineRight.h" />
@@ -109,7 +111,6 @@
     <ClInclude Include="..\WriteKorean.h" />
     <ClInclude Include="..\WriteVisitor.h" />
     <ClInclude Include="..\FlipTraverser.h" />
-    <ClInclude Include="MultiSelectionStrategy.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp" />
@@ -144,10 +145,12 @@
     <ClCompile Include="..\MarkStrategy.cpp" />
     <ClCompile Include="..\MouseAction.cpp" />
     <ClCompile Include="..\MouseStrategy.cpp" />
+    <ClCompile Include="..\MoveStrategy.cpp" />
     <ClCompile Include="..\MoveTraverser.cpp" />
     <ClCompile Include="..\MoveVisitor.cpp" />
     <ClCompile Include="..\MultiLineDragAction.cpp" />
     <ClCompile Include="..\MultiSelect.cpp" />
+    <ClCompile Include="..\MultiSelectionStrategy.cpp" />
     <ClCompile Include="..\OnHScrollLeft.cpp" />
     <ClCompile Include="..\OnHScrollLineLeft.cpp" />
     <ClCompile Include="..\OnHScrollLineRight.cpp" />
@@ -200,7 +203,6 @@
     <ClCompile Include="..\WriteKorean.cpp" />
     <ClCompile Include="..\WriteVisitor.cpp" />
     <ClCompile Include="..\FlipTraverser.cpp" />
-    <ClCompile Include="MultiSelectionStrategy.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
