--- a/Mindmap/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap/Mindmap.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="..\MoveStrategy.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\UpdateTraverser.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp">
@@ -561,6 +564,9 @@
       <Filter>헤더 파일</Filter>
     </ClCompile>
     <ClCompile Include="..\MoveStrategy.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\UpdateTraverser.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
