--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -79,6 +79,8 @@
     <ClInclude Include="Row.h" />
     <ClInclude Include="ScrollAction.h" />
     <ClInclude Include="ScrollStrategy.h" />
+    <ClInclude Include="SearchKey.h" />
+    <ClInclude Include="SearchVisitor.h" />
     <ClInclude Include="Select.h" />
     <ClInclude Include="Selection.h" />
     <ClInclude Include="SelectionMarkVisitor.h" />
@@ -166,6 +168,8 @@
     <ClCompile Include="Row.cpp" />
     <ClCompile Include="ScrollAction.cpp" />
     <ClCompile Include="ScrollStrategy.cpp" />
+    <ClCompile Include="SearchKey.cpp" />
+    <ClCompile Include="SearchVisitor.cpp" />
     <ClCompile Include="Select.cpp" />
     <ClCompile Include="Selection.cpp" />
     <ClCompile Include="SelectionMarkVIsitor.cpp" />
