찾기 바꾸기 완성
정렬하기 완성본과 합침. 찾기키, 바꾸기키, 찾기 비지터 생성. 나중에 텍스트 찾기 기능과 합쳐서 수정해야함.

--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="Page.h" />
     <ClInclude Include="PageApp.h" />
     <ClInclude Include="PageForm.h" />
+    <ClInclude Include="ReplaceKey.h" />
     <ClInclude Include="Row.h" />
     <ClInclude Include="ScrollAction.h" />
     <ClInclude Include="ScrollStrategy.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="Page.cpp" />
     <ClCompile Include="PageApp.cpp" />
     <ClCompile Include="PageForm.cpp" />
+    <ClCompile Include="ReplaceKey.cpp" />
     <ClCompile Include="Row.cpp" />
     <ClCompile Include="ScrollAction.cpp" />
     <ClCompile Include="ScrollStrategy.cpp" />
