--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClInclude Include="SearchVisitor.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ReplaceKey.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrangeKey.cpp">
@@ -543,6 +546,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="SearchKey.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ReplaceKey.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
